update searchBar
