# project/Services/MainPages/controllers/feedController.js
@@ -217,6 +217,24 @@ class feedController {
         }
     }
 
+    async searchBarName(req,res){
+        try {
+            const service = new actorService();
+            const getService = await service.searchByName(req, res);
+            if (getService) {
+                res.writeHead(200, { 'Content-Type': 'application/json' });
+                res.write(JSON.stringify(getService))
+                res.end()
+            } else {
+                console.log('fara succes')
+            }
+        } catch (error) {
+            console.log(error);
+            res.writeHead(500, {'Content-Type': 'application/json'});
+            res.end(JSON.stringify({success: false, message: 'Internal error'}));
+        }
+    }
+
     async statisticGenre(req,res){
         try {
             const service = new actorService();
